[package]
name = "turbo-fortnight"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres"] }
axum = "0.7.4"
dotenv = "0.15.0"